extras/kyverno-policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
  annotations:
    policies.kyverno.io/title: Require runAsNonRoot
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-runAsNonRoot
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: ["business"]
      validate:
        message: "Containers must set securityContext.runAsNonRoot=true."
        anyPattern:
          - spec:
              securityContext:
                runAsNonRoot: true
              containers:
                - securityContext:
                    runAsNonRoot: true
          - spec:
              containers:
                - securityContext:
                    runAsNonRoot: true
